Driver order page: add a link at bottom #4433

--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -350,6 +350,11 @@
 	<div class="divider"></div><br><br><br>
 
 
+	<div class="info-block">
+		<a href="/drivers/orders/">View All Orders</a>
+	</div>
 
+
+	<br><br>
 
 </div>
