Create "Remove All Future Recurrences button" for Community Shifts #4480

--- a/include/views/default/cockpit/drivers/shift/community/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/community/index.phtml
@@ -46,6 +46,11 @@
 									<br/>
 									<a class="shift-previous" href="/drivers/shift/community/<?php echo $id_community ?>/<?php echo $this->link_prev; ?>"><strong><i class="icon icon-angle-left"></i> previous</strong></a>
 								</div>
+									<div class="span8 padded" style="text-align:center;">
+										<h5>
+											From <?php echo $this->from->format('M jS Y') ?> to <?php echo $this->to->format('M jS Y'); ?>
+										</h5>
+									</div>
 								<div class="span2 padded" style="text-align:right;">
 									<br/>
 									<a class="shift-next" href="/drivers/shift/community/<?php echo $id_community ?>/<?php echo $this->link_next; ?>"><strong>next <i class="icon icon-angle-right"></i></strong></a>
