--- a/include/views/default/cockpit/drivers/shift/summary/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/summary/index.phtml
@@ -209,7 +209,8 @@
 		margin: 5px 0;
 	}
 	#modal-shift{
-		width: 780px !important;
+		width: 900px !important;
+        margin: 0 auto;
 	}
 </style>
 <script type="text/javascript" src="/assets/js/admin.shift.js"></script>
