ability to create marketing rep accounts in cockpit.la #4462

--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
@@ -6,6 +6,8 @@
 
 	<div class="divider"></div>
 
+	<navigation-back></navigation-back>
+
 	<form name="formBasic" novalidate>
 		<div class="ul-inputs box-content2">
 			<ul ng-class="{'submitted':basicSubmitted}">
