--- a/include/views/default/cockpit2/frontend/general/general-profile-referal.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-profile-referal.phtml
@@ -1,7 +1,7 @@
 <ul class="ul-info box-content2">
 	<li class="li-info">
 		<p>
-			Get new customers to put this code in the Notes section of their first order for <b>${{config.reward_points_get_referred_discount_amt|formatPrice}} off</b> and <b>earn ${{config.reward_points_admin_refer_user_amt|formatPrice}}</b> yourself for every new customer your refer.
+			Get new customers to put this code in the Notes section of their first order for <b>${{account.user.referral_customer_credit|formatPrice}} off</b> and <b>earn ${{account.user.referral_admin_credit|formatPrice}}</b> yourself for every new customer your refer.
 		</p>
 		<div class="invite-code allow-select">{{account.user.invite_code}}</div>
 	</li>
