--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -36,7 +36,7 @@
 					</table>
 				</a>
 
-				<a href="/drivers/docs" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-documents')}">
+				<a href="/staff/marketing-rep/docs" class="menu-link" ng-if="account.isMarketingRep && menu.toggle=='marketing-rep'" ng-class="{'nav-active': (navigation.page == 'marketing-rep-docs')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-briefcase"></i></td>
@@ -46,7 +46,7 @@
 				</a>
 
 
-				<a href="/drivers/summary" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isDriver) && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
+				<a href="/drivers/summary" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isMarketingRep) && menu.toggle=='marketing-rep'" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-bank"></i></td>
@@ -55,7 +55,7 @@
 					</table>
 				</a>
 
-				<a href="/drivers/help" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-help')}">
+				<a href="/staff/marketing-rep/faq" class="menu-link" ng-if="account.isMarketingRep && menu.toggle=='marketing-rep'" ng-class="{'nav-active': (navigation.page == 'marketing-rep-help')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-support"></i></td>
