--- a/include/views/default/crunchbutton/layout/html.body.phtml
+++ b/include/views/default/crunchbutton/layout/html.body.phtml
@@ -147,7 +147,9 @@
 
 				<div class="footer-content hidden-phone" ng-controller="MainHeaderCtrl">
 					<a href="javascript:;" ng-click="navigation.link('/help')">Help</a>
-					<a href="https://docs.google.com/forms/d/1zmBx0XOxXi8UpqKX3n7lzXHJUbJqsMrjomqprYBRh0E/viewform?edit_requested=true">Apply to Drive</a>
+					<? if (c::config()->site->config('apply-to-drive')->val()) : ?>
+						<a href="https://docs.google.com/forms/d/1zmBx0XOxXi8UpqKX3n7lzXHJUbJqsMrjomqprYBRh0E/viewform?edit_requested=true">Apply to Drive</a>
+					<? endif ; ?>
 					<a ng-show="navigation.account.user" href="javascript:;" ng-click="navigation.link('/orders')">Order History</a>
 
 					<a href="javascript:App.test.card();" class="test-card" ng-show="debug()">TEST: card</a>
