--- a/include/views/default/crunchbutton/frontend/restaurant.closed.inline.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.closed.inline.phtml
@@ -4,11 +4,29 @@
 	</div>
 	<div class="restaurant-closed-content">
 		<span class="restaurant-closed-title">
-			<span class="restaurant-closed-name">{{restaurant.name}} is currently closed!</span>
-			<span class="restaurant-closed-generic">Currently closed!</span>
+			<span class="restaurant-closed-name">{{restaurant.name}}&nbsp;
+				
+				<span ng-if="restaurant.open_for_business == '0'">
+					<span ng-if="restaurant.delivery">is temporarily unavailable for delivery.</span>
+					<span ng-if="!restaurant.delivery">is temporarily closed.</span>
+				</span>
+				<span ng-if="restaurant.open_for_business != '0'">
+					<span ng-if="restaurant.delivery">is currently unavailable for delivery.</span>
+					<span ng-if="!restaurant.delivery">is currently closed.</span>
+				</span>
+			</span>
+			<span class="restaurant-closed-generic">Currently not available!</span>
 		</span>
 		<span class="restaurant-closed-content">
-			It will be open during the following hours (<span ng-bind="restaurant._tzabbr"></span>):<br> 
+			<span ng-if="restaurant.open_for_business == '0'">
+				<span ng-if="restaurant.delivery">Delivery is usually available during the following hours</span>
+				<span ng-if="!restaurant.delivery">Pickup is usualy available during the following hours</span>
+			</span>
+			<span ng-if="restaurant.open_for_business != '0'">
+				<span ng-if="restaurant.delivery">Delivery is available during the following hours</span>
+				<span ng-if="!restaurant.delivery">It will be open during the following hours</span>
+			</span>
+			&nbsp;(<span ng-bind="restaurant._tzabbr"></span>):<br> 
 			<span ng-bind-html-unsafe="restaurant.closedMessage() | nl2br"></span>
 		</span>
 	</div>
