--- a/include/views/default/seven/frontend/restaurant.closed.phtml
+++ b/include/views/default/seven/frontend/restaurant.closed.phtml
@@ -4,19 +4,23 @@
 		<div class="dialog-egg animated-resize"></div>
 			<span ng-if="active">
 				<p>
-					<span ng-if="acceptingOrders">
-						is currently closed. It will be open during the following hours 
-					</span>
+					
 					<span ng-if="!acceptingOrders">
-						You can't place an order here right now, but you usually can during these hours
+						<span ng-if="restaurant.delivery">is temporarily unavailable for delivery, but is usualy available durring the following hours</span>
+						<span ng-if="!restaurant.delivery">is temporarily closed but is usualy available during the following hours</span>
 					</span>
+					<span ng-if="acceptingOrders">
+						<span ng-if="restaurant.delivery">is currently unavailable for delivery. Delivery is available during the following hours</span>
+						<span ng-if="!restaurant.delivery">is currently closed. It will be open during the following hours</span>
+					</span>
+
 					&nbsp;(<span ng-bind="restaurant._tzabbr"></span>):<br /><br />
 
 				</p>
 				<p ng-bind-html-unsafe="closedMessage" class="dialog-hours"></p>
 			</span>
 			<span ng-if="!active">
-				<p>This restaurant is currently closed</p>
+				<p>This restaurant is currently unavailable</p>
 			</span>
 			<div class="divider"></div>
 
