--- a/include/views/default/crunchbutton/legal/index.phtml
+++ b/include/views/default/crunchbutton/legal/index.phtml
@@ -26,7 +26,7 @@ We have created the Site to serve as a marketplace to facilitate the ordering an
 
 (a) All ordering is performed online and may be paid for with cash upon delivery or by credit card.  If you decide to use a credit card, your payment will be processed by Balancedpayments.com and not by Crunchbutton. By submitting a payment by credit card you hereby authorize Crunchbutton to transfer your credit card information to Balancedpayments.com for processing.
 
-(b) Crunchbutton is dedicated to customer satisfaction. If you encounter problems with your food order, please contact the restaurant directly. If you are unable to resolve an issue with a restaurant, please contact Crunchbutton and we will try to assist you. In appropriate cases, we may be able to provide a partial or full refund and/or a credit towards a future purchase.
+(b) Crunchbutton is dedicated to customer satisfaction. If you encounter problems with your order, please contact Crunchbutton and we will try to assist you. In appropriate cases, we may be able to provide a partial or full refund and/or a credit towards a future purchase.
 
 5.  Restaurant Reviews
 
