--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
@@ -1,4 +1,10 @@
-<div class="top-pad"></div>
 <div class="drivers-welcome">
-
+	<div class="top-pad"></div>
+	<div class="content-padding">
+		<h1 class="welcome-title">Fullfilling orders</h1>
+		
+		<div class="welcome-icon"><i class="fa fa-truck"></i></div>
+		<p>My job is to make your job easier. Getting orders placed blah blah blah not creative right now.</p>
+		<div class="welcome-button"><a href="/drivers/welcome/location"><button  class="button orange">Next</button></a></div>
+	</div>
 </div>
