--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
@@ -1,8 +1,10 @@
-<div class="top-pad"></div>
+
 <div class="drivers-welcome">
-	<div class="slide">
-		<h1>Enable location services</h1>
+	<div class="top-pad"></div>
+	<div class="content-padding">
+		<h1 class="welcome-title">Enable location services</h1>
 		
+		<div class="welcome-icon"><i class="fa fa-location-arrow"></i></div>
 		<p>
 			In order to better serve customers, please enable your location services for me.
 			<br><br>
@@ -10,6 +12,7 @@
 			<br><br>
 			Go ahead and click the enable button at the bottom so we can continue.
 		</p>
+		<div class="welcome-button"><a href="/drivers/welcome/push"><button  class="button orange">Enable</button></a></div>
 
 	</div>
 </div>
