--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-push.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-push.phtml
@@ -1,16 +1,19 @@
-<div class="top-pad"></div>
-<div class="drivers-welcome">
 
-	<div class="slide">
-		<h1>Enable push notifications</h1>
+<div class="drivers-welcome">
+	<div class="top-pad"></div>
+	<div class="content-padding">
+		<h1 class="welcome-title">Enable push notifications</h1>
+		<div class="welcome-icon"><i class="fa fa-bell"></i></div>
 		
 		<p>
+			
 			I just love talking to you, so let's do it more often. 
 			<br><br>
 			When an order comes in, I will let you know about it by sending you a notification.
 			<br><br>
 			Please enable push notifications so we can keep on chatin'.
 		</p>
+		<div class="welcome-button"><a href="/drivers/welcome/wahoo"><button  class="button orange">Enable</button></a></div>
 
 	</div>
 	
