--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
@@ -1,9 +1,11 @@
-<div class="top-pad"></div>
 <div class="drivers-welcome">
-
-	<div class="slide">
-		<h1>Wahoo!</h1>
+	<div class="top-pad"></div>
+	<div class="content-padding">
+		<h1 class="welcome-title">Wahoo</h1>
 		
+		<div class="welcome-icon"><i class="fa fa-child"></i></div>
 		<p>That't it! Now, lets deliver some awesome sauce!</p>
-	</div>	
+		<div class="welcome-button"><a href="/drivers/docs"><button  class="button orange">yay!</button></a></div>
+
+	</div>
 </div>
