--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-home.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-home.phtml
@@ -6,6 +6,6 @@
 		<!--div class="drivers-welcome-logo"></div -->
 		<div class="welcome-icon"><i class="fa fa-smile-o"></i></div>
 		<p>So it seems this is the first time I have seen you. Lets take a second to get to know each other.</p>
-		<div class="welcome-button"><a href="/drivers/welcome/info"><button  class="button orange">Next</button></a></div>
+		<div class="welcome-button"><a href="/drivers/welcome/info"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Next</span></button></a></div>
 	</div>
 </div>
