--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-location.phtml
@@ -12,7 +12,6 @@
 			<br><br>
 			Go ahead and click the enable button at the bottom so we can continue.
 		</p>
-		<div class="welcome-button"><a href="/drivers/welcome/push"><button  class="button orange">Enable</button></a></div>
-
+		<div class="welcome-button"><a href ng-click="locateit()"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Enable</span></button></a></div>
 	</div>
 </div>
