--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-wahoo.phtml
@@ -5,7 +5,6 @@
 		
 		<div class="welcome-icon"><i class="fa fa-child"></i></div>
 		<p>That't it! Now, lets deliver some awesome sauce!</p>
-		<div class="welcome-button"><a href="/drivers/docs"><button  class="button orange">yay!</button></a></div>
-
+		<div class="welcome-button"><a href="/drivers/docs"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">yay</span></button></a></div>
 	</div>
 </div>
