--- a/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-welcome-info.phtml
@@ -4,7 +4,7 @@
 		<h1 class="welcome-title">Fullfilling orders</h1>
 		
 		<div class="welcome-icon"><i class="fa fa-truck"></i></div>
-		<p>My job is to make your job easier. Getting orders placed blah blah blah not creative right now.</p>
-		<div class="welcome-button"><a href="/drivers/welcome/location"><button  class="button orange">Next</button></a></div>
+		<p>Your task is to deliver the orders and my job is to make your task a lot easier. Let's work together!</p>
+		<div class="welcome-button"><a href="/drivers/welcome/location"><button class="ladda-button button orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Next</span></button></a></div>
 	</div>
 </div>
