--- a/include/views/default/cockpit2/frontend/general/general-profile.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-profile.phtml
@@ -39,5 +39,10 @@
 			<div profile-preference class="tb-info-item" content="Display demo orders" type="bool" key="demo"></div>
 		</div>
 	</div>
+	
+	<div ng-if="account.isDriver">
+		<p><a href="/drivers/welcome">Run setup</a></p>
+		<br><br>
+	</div>
 
 </div>
