--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -379,7 +379,7 @@
 
 	<!-- Notification -->
 	<div class="notification-alert-container zoom-anim-dialog mfp-hide dialog" ng-controller="NotificationAlertCtrl">
-		<h1 ng-bind="title" ng-show="title"></h1>
+		<h1 ng-bind="alertTitle" ng-show="alertTitle"></h1>
 		<p ng-bind-html-unsafe="message" class="small-message"></p>
 		<button ng-click="complete()" class="button green">OK</button>
 	</div>
